refactored into tags and components

--- a/packages/elements/src/_variables.scss
+++ b/packages/elements/src/_variables.scss
@@ -1,3 +1,4 @@
+// Colors
 $color-green: #007965;
 $color-red: #8c0000;
 $color-blue: #28527a;
@@ -8,13 +9,18 @@ $color-white: #ffffff;
 $color-gray: #D3D3D3;
 
 
+// Size
 $padding-low: 0.25rem;
 $padding-default: 0.5rem;
 $padding-high: 1rem;
 $padding-vhigh: 2rem;
 $padding-vvhigh: 3rem;
 
+
+
 $font-size-base: 1.1rem;
 $font-size-small: 0.8rem;
 $font-size-large: 1.4rem;
+
+
 
