--- a/packages/elements/src/index.scss
+++ b/packages/elements/src/index.scss
@@ -1,44 +1,11 @@
 @import "./variables";
 @import "./calculated";
-@import "./mixins";
+@import "./components";
+@import "./tags";
+
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap');
 
-html {
-  font-size: $font-size-base;
-  font-family: 'Source Sans Pro', sans-serif;
-}
 
-body {
-  width: 60vw;
-  margin: 0 auto;
-}
-
-h1 {
-  color: $color-orange;
-  font-size: 3rem;
-}
-
-h2 {
-  color: $color-orange;
-  font-size: 2.4rem;
-}
-
-h3 {
-  color: $color-orange;
-  font-size: 2rem;
-}
-h4 {
-  color: $color-orange;
-  font-size: 1.65rem;
-}
-h5 {
-  color: $color-orange;
-  font-size: 1.5rem;
-}
-h6 {
-  color: $color-orange;
-  font-size: 1.25rem;
-}
 
 .columns {
   display: flex;
@@ -49,166 +16,4 @@ h6 {
 
 .rows {
   display: flex;
-}
-
-//****************************** Generic Tags ********************************
-
-nav {
-  display: flex;
-  justify-content: space-between;
-  background-color: black;
-}
-
-a {
-  text-decoration: none;
-  color: $color-pink;
-}
-
-aside {
-  opacity: 0.3;
-}
-
-section {
-  background-color: cadetblue;
-  width: min-content;
-}
-
-header {
-  color: black;
-  font-size: 1rem;
-  text-align: left;
-  border-bottom: black solid 1px;
-}
-footer {
-  color: black;
-  font-size: 1rem;
-  text-align: right;
-  border-top: black solid 1px;
-}
-
-//****************************** Components ********************************
-
-// Button Component
-.button{
-  @include generate-button($color-black, 'true')
-}
-
-.button-outline{
-  @include generate-button($color-black, 'false')
-}
-
-.button-green{
-  @include generate-button($color-green, 'true');
-}
-
-.button-red{
-  @include generate-button($color-red, 'true');
-}
-
-.button-blue{
-  @include generate-button($color-blue, 'true');
-}
-
-.button-orange{
-  @include generate-button($color-orange, 'true')
-}
-
-.button-pink{
-  @include generate-button($color-pink, 'true')
-}
-
-.button-outline-green{
-  @include generate-button($color-green, 'false')
-}
-
-.button-outline-red{
-  @include generate-button($color-red, 'false')  
-}
-
-.button-outline-blue{
-  @include generate-button($color-blue, 'false')
-}
-
-.button-outline-orange{
-  @include generate-button($color-orange, 'false')
-}
-
-.button-outline-pink{
-  @include generate-button($color-pink, 'false')
-}
-
-.card{
-  width: 16rem;
-  border: 1px solid $color-gray;
-}
-
-.card-header{
-  padding: $padding-vvhigh 0;
-  text-align: center;
-  background-color: $color-gray
-}
-
-.card-body{
-  padding: $padding-low;
-}
-
-.card-title{
-  font-size: 1.2rem;
-  font-weight: bold;
-  margin: 0.7rem 0;
-}
-
-.card-footer{
-  padding: 0.5rem;
-}
-
-.breadcrumb{
-  list-style-type: none;
-  display: flex;
-  padding: $padding-default;
-  border: 1px solid $color-gray;
-}
-
-.bread-item{
-  margin-right: 0.75rem;
-}
-
-.navbar{
-  list-style-type: none;
-  display: flex;
-}
-
-.navbar.outline{
-  .nav-item{
-    @extend .button;
-  }
-}
-
-.nav-item *{
-  text-decoration: none;
-  color: $color-white;
-}
-
-.nav-item{
-  @extend .button;
-  margin: $padding-default;
-}
-
-.jumbotron{
-  width: 100%;
-  margin: 3rem auto;
-  padding: $padding-high $padding-vvhigh;
-  box-shadow: 0 0 5px 2px $color-gray;
-  
-  .jumbo-header{
-    @extend h1;
-  }
-  
-  .jumbo-body{
-    margin: 2rem 0;
-  }
-  
-  .jumbo-footer{
-    margin: 2rem 0;
-  }
 }
