--- a/packages/elegantcss/src/_variables.scss
+++ b/packages/elegantcss/src/_variables.scss
@@ -6,7 +6,7 @@ $color-orange: #e45826;
 $color-pink: #b34180;
 $color-black: #000000;
 $color-white: #ffffff;
-$color-gray: #D3D3D3;
+$color-gray: #888888;
 
 
 // Size
