--- a/packages/elegantcss/src/_mixins.scss
+++ b/packages/elegantcss/src/_mixins.scss
@@ -26,3 +26,25 @@
       }
     }
 }
+
+@mixin generate-alert($color) {
+  border: 1px solid $color;
+  width: 100%;
+  background-color: $color;
+  padding: 1rem 1.5rem 1rem 1rem;
+  .alert-header{
+    font-weight: bold;
+    font-size: 1.2rem;
+    //border-bottom: 1px solid $color-gray;
+    padding-bottom: 0.5rem;
+  }
+
+  .alert-body{
+    padding: 0.5rem 0;
+  }
+
+  .alert-footer{
+    border-top: 1px solid $color-gray;
+    padding-top: 0.5rem;
+  }
+}
